--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
   assets:
     - assets/
     - assets/icons/
+    - assets/userIcon/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
