--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.3.1
   flutter_colorpicker: ^1.1.0
+  mime: ^1.0.0
+  http_parser: ^4.0.0
+  cached_network_image: ^3.4.1
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
