--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http_parser: ^4.0.0
   cached_network_image: ^3.4.1
   html_unescape: ^2.0.0
+  lottie : ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
     - assets/
     - assets/icons/
     - assets/userIcon/
+    - assets/animations/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
