--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.4.1
   html_unescape: ^2.0.0
   lottie : ^3.3.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
