--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   html_unescape: ^2.0.0
   lottie : ^3.3.1
   shimmer: ^3.0.0
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
