--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   lottie : ^3.3.1
   shimmer: ^3.0.0
   fluttertoast: ^8.2.12
+  #Socket
+  socket_io_client: ^3.1.1
 
 dev_dependencies:
   flutter_test:
