--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   mime: ^1.0.0
   http_parser: ^4.0.0
   cached_network_image: ^3.4.1
+  flutter_cache_manager: ^3.3.0
   html_unescape: ^2.0.0
   lottie : ^3.3.1
   shimmer: ^3.0.0
